create product category

--- a/Services/Catalog/Yu-Gi.Catalog/appsettings.json
+++ b/Services/Catalog/Yu-Gi.Catalog/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "DatabaseSettings": {
+    "CategoryCollectionName": "Categories",
+    "ProductCollectionName": "Products",
+    "ProductDetailCollectionName": "ProductDetails",
+    "ProductImageCollectionName": "ProductImages",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ExodiaCatalogDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
