docker servicehost change

--- a/Services/Catalog/Yu-Gi.Catalog/Properties/launchSettings.json
+++ b/Services/Catalog/Yu-Gi.Catalog/Properties/launchSettings.json
@@ -36,6 +36,7 @@
         "ASPNETCORE_HTTPS_PORTS": "8081",
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
+      "sslPort": 5000,
       "publishAllPorts": true,
       "useSSL": true
     }
